force-app/main/default/objects/SBQQ__Quote__c/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description>The sum of the price after discounts, of the first 12 months (or less) of the &quot;subscription&quot; family of the Order Form.</description>
    <label>ACV</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Family__c</field>
        <operation>equals</operation>
        <value>Subscription</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__SegmentIndex__c</field>
        <operation>lessThan</operation>
        <value>13</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>