force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <formula>SBQQ__PrimaryContact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact Email</label>
    <type>Text</type>
</CustomField>