force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly in Arrears</fullName>
            </value>
            <value>
                <fullName>Quarterly in Advance</fullName>
            </value>
            <value>
                <fullName>Biannually in Advance</fullName>
            </value>
            <value>
                <fullName>Yearly in Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>