force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>DATE(
    YEAR(SBQQ__StartDate__c) + FLOOR((MONTH(SBQQ__StartDate__c) + SBQQ__SubscriptionTerm__c - 1) / 12),
    MOD(MONTH(SBQQ__StartDate__c) + SBQQ__SubscriptionTerm__c - 1, 12) + 1,
    DAY(SBQQ__StartDate__c)
)-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>