force-app/main/default/objects/SBQQ__Quote__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <formula>SBQQ__Account__r.Legal_Entity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity</label>
    <type>Text</type>
</CustomField>