force-app/main/default/objects/SBQQ__Quote__c/fields/Months_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Months_Discounted__c</fullName>
    <description>Indicates the number of months of the subscription to which a discount was applied</description>
    <label>Months Discounted</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__Discount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Family__c</field>
        <operation>equals</operation>
        <value>Subscription</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>