force-app/main/default/objects/SBQQ__Quote__c/fields/Pry__c.field-meta.xml
<CustomField>
    <fullName>Pry__c</fullName>
    <formula>IF( SBQQ__Primary__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>