force-app/main/default/objects/SBQQ__Quote__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <description>The sum of all non-subscription product values</description>
    <label>Services</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Family__c</field>
        <operation>notEqual</operation>
        <value>Subscription</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>