force-app/main/default/objects/SBQQ__Quote__c/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <inlineHelpText>Please add the Client´s local Tax ID (I.E. NIT, RFC, CPF, QUIT, RUC, RUT, EIN)</inlineHelpText>
    <label>Tax ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>