force-app/main/default/objects/SBQQ__Quote__c/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <description>The sum of the price after discounts, of the products of the &quot;subscription&quot; family during the entire duration of the Order Form.</description>
    <label>TCV</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Family__c</field>
        <operation>equals</operation>
        <value>Subscription</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>