force-app/main/default/objects/SBQQ__Quote__c/fields/Treasury_Contact__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treasury Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Treasury Contact)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>