force-app/main/default/objects/SBQQ__Quote__c/fields/Treasury_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Contact_Name__c</fullName>
    <formula>Treasury_Contact__r.FirstName  &amp;  Treasury_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treasury Contact Name</label>
    <type>Text</type>
</CustomField>