force-app/main/default/objects/SBQQ__Quote__c/fields/Treasury_Email__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Email__c</fullName>
    <formula>Treasury_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treasury Email</label>
    <type>Text</type>
</CustomField>